<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_contact_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#B3B3B3"
        tools:ignore="ContentDescription"
        tools:layout_height="100dp"
        tools:layout_width="100dp" />

    <TextView
        android:id="@+id/tv_first_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/first_name_title"
        app:layout_constraintBottom_toTopOf="@+id/tv_last_name_title"
        app:layout_constraintStart_toEndOf="@id/iv_contact_image"
        app:layout_constraintTop_toTopOf="@id/iv_contact_image" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_first_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_first_name_title"
        app:layout_constraintTop_toTopOf="@id/tv_first_name_title"
        tools:text="First name" />

    <TextView
        android:id="@+id/tv_last_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/last_name_title"
        app:layout_constraintBottom_toTopOf="@+id/tv_phone_number_title"
        app:layout_constraintStart_toStartOf="@id/tv_first_name_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_name_title" />

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_last_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_last_name_title"
        app:layout_constraintTop_toTopOf="@id/tv_last_name_title"
        tools:text="Last name very very very very large" />

    <TextView
        android:id="@+id/tv_phone_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phone_number_title"
        app:layout_constraintBottom_toBottomOf="@id/iv_contact_image"
        app:layout_constraintStart_toStartOf="@id/tv_first_name_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_name_title" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_phone_number_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_phone_number_title"
        app:layout_constraintTop_toTopOf="@id/tv_phone_number_title"
        tools:text="123456789" />

</androidx.constraintlayout.widget.ConstraintLayout>